# mcp-server-scpi

./: LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-before-tests.sh
docs/bench-validation/: README.md  results-20260701-185018.xlsx  test-log-20260701-185018.md
src/scpi_mcp/: __init__.py  capabilities.py  config.py  server.py
src/scpi_mcp/cli/: README.md  __init__.py  main.py
src/scpi_mcp/export/: __init__.py  formats.py
src/scpi_mcp/instruments/: __init__.py  base.py  mock.py  rigol_ds1000z.py
src/scpi_mcp/tools/: __init__.py  acquisition.py  capture.py  characterize.py  config_tools.py  connection.py  measure.py
src/scpi_mcp/transport/: __init__.py  connect.py  discover.py
tests/: conftest.py  test_characterize.py  test_cli_waveform.py  test_export.py  test_instruments_mock.py  test_permissions.py  test_rigol_backend.py  test_tools.py  test_transport.py
